assets/css/circle-dot-cursor.css
.circle-dot-cursor {
  pointer-events: none;
}
.circle-dot-cursor__ball {
  position: fixed;
  top: 0;
  left: 0;
  mix-blend-mode: difference;
  z-index: 1000;
}
.circle-dot-cursor__ball svg {
  display: block;
  vertical-align: baseline;
}
.circle-dot-cursor__ball--big {
  width: 26px;
  height: 26px;
}
.circle-dot-cursor__ball--small {
  width: 16px;
  height: 16px;
}
.circle-dot-cursor__ball circle {
  fill: #f7f8fa;
}
.hide-cursor {
  cursor: none !important;
}

